# vidu-video-generator

./: .env.example  .gitignore  README.md  plan.md  pyproject.toml
config/: pipeline.yaml
config/characters/: example.yaml
config/styles/: default.yaml
docs/: 00_quickstart.md  01_setup_comfyui.md  02_train_lora.md  04_voice_cloning.md  99_troubleshooting.md
scripts/: download_models.py  setup_comfyui_nodes.sh  train_character_lora.py
src/video_pipeline/: cli.py
src/video_pipeline/imagegen/: batch.py  comfy_client.py
tests/: test_cli.py  test_imagegen.py
workflows/: i2v_wan22.json  txt2img_base.json  txt2img_lora.json
workflows/api/: txt2img_base.json  txt2img_lora.json
