[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "video-pipeline"
version = "0.1.0"
description = "Automated Vietnamese anime video generation pipeline"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "moviepy>=1.0.3",
    "faster-whisper>=1.0",
    "ollama>=0.2",
    "huggingface-hub>=0.23",
    "pillow>=10.0",
    "numpy>=1.26",
    "typer>=0.12",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "pyloudnorm>=0.1",
]

[project.scripts]
vpipe = "video_pipeline.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/video_pipeline"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["moviepy.*", "faster_whisper.*", "pyloudnorm.*"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "types-requests",
    "types-PyYAML",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
